try fix clipping pieces in mini board

--- a/illchess-frontend/src/app/chess-game/components/chess-board-mini/chess-board-mini.component.scss
+++ b/illchess-frontend/src/app/chess-game/components/chess-board-mini/chess-board-mini.component.scss
@@ -42,7 +42,6 @@
     align-items: center;
     width: $chess-square-size-mini;
     height: $chess-square-size-mini;
-    display: flex;
 }
 
 .chess-piece-wrapper:active {
